align bug fix

--- a/web/css/hero_test.css
+++ b/web/css/hero_test.css
@@ -20,6 +20,7 @@ body, html {
 
 .slider-controls {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
